--- a/contact.html
+++ b/contact.html
@@ -255,7 +255,7 @@
               pour vous fournir les réponses dont vous avez besoin et pour
               faciliter votre compréhension de notre mission et de nos actions.
             </p>
-            <p class="mb-4">
+            <p class="mb-4" id="partenaire">
            <p style="font-weight: bolder;">   <img src="./img/partner.png" width="80" alt="" srcset="" /> Devenir un partenaire ?</p>
          
               Pour devenir un partenaire, veuillez remplir le formulaire de
@@ -264,7 +264,7 @@
               requises. Nous vous recontacterons rapidement pour discuter des
               opportunités de collaboration.
             </p>
-            <p class="mb-4">
+            <p class="mb-4" id="benevole">
               <p style="font-weight: bolder;">   <img src="./img/benevolat.png" width="80" alt="" srcset="" /> Devenir un bénévolat ?</p>Pour
               devenir un bénévolat, veuillez remplir le formulaire de contact en
               sélectionnant l'option "Bénévolats et Collaborations" dans le
