--- a/humanitaire.html
+++ b/humanitaire.html
@@ -261,7 +261,7 @@
           campagnes pour sensibiliser le public aux enjeux liés à la
           réhabilitation.
         </p>
-        <a class="btn btn-outline-primary py-2 px-3" target="_blank" href="contact.html">
+        <a class="btn btn-outline-primary py-2 px-3"  href="contact.html#benevole">
         Devenir un bénévolat
               <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
                   <i class="fa fa-arrow-right"></i>
@@ -377,6 +377,12 @@
           
           Rejoignez notre cause en faisant un don alimentaire ou en offrant votre temps comme bénévole. Ensemble, nous pouvons nourrir les rêves des enfants de Dantokpa, un acte de bonté à la fois.
         </p>
+        <a class="btn btn-outline-primary py-2 px-3" target="_blank" href="https://me.fedapay.com/wP6ip9Oe">
+          Faire un don en nature
+                 <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
+                     <i class="fa fa-arrow-right"></i>
+                 </div>
+             </a>
       </div>
     </div>
     <div class="parent">
@@ -398,6 +404,12 @@
           Ensemble, nous pouvons éduquer avec des fournitures scolaires, un acte
           de bonté à la fois.
         </p>
+        <a class="btn btn-outline-primary py-2 px-3" target="_blank" href="https://me.fedapay.com/wP6ip9Oe">
+          Offrir de fournitures scolaires
+                 <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
+                     <i class="fa fa-arrow-right"></i>
+                 </div>
+             </a>
       </div>
     </div>
     <div class="containers">
