--- a/ministere.html
+++ b/ministere.html
@@ -165,13 +165,13 @@
                 >Nos actions</a
               >
               <div class="dropdown-menu m-0">
-                <a href="ministere.html" class="dropdown-item"
+                <a href="ministere.html" class="dropdown-item active"
                   >Le centre de prière</a
                 >
                 <a href="fanfare.html" class="dropdown-item"
                   >L'Orchestre Philharmonie</a
                 >
-                <a href="humanitaire.html" class="dropdown-item active"
+                <a href="humanitaire.html" class="dropdown-item"
                   >Aide Humanitaire et Education</a
                 >
               </div>
@@ -239,220 +239,83 @@
     </div>
     <!-- Page Header End -->
 
-    <!-- Service Start -->
-    <!-- <div class="container-xxl py-5">
-        <div class="container">
-            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <div class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3">What We Do</div>
-                <h1 class="display-6 mb-5">Learn More What We Do And Get Involved</h1>
-            </div>
-            <div class="row g-4 justify-content-center">
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-                        <img class="img-fluid mb-4" src="img/icon-1.png" alt="">
-                        <h4 class="mb-3">Child Education</h4>
-                        <p class="mb-4">Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed vero dolor duo.</p>
-                        <a class="btn btn-outline-primary px-3" href="">
-                            Learn More
-                            <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
-                                <i class="fa fa-arrow-right"></i>
-                            </div>
-                        </a>
-                    </div>
+    <!-- Carousel Start -->
+    <div class="container-fluid p-0 mb-5">
+      <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              class="w-100"
+              src="img/carousel-1.jfif"
+              alt="  Éclairant les âmes perdues, Répandant l'amour de Christ"
+            />
+            <div class="carousel-caption">
+              <div class="container">
+                <div class="row justify-content-center">
+                  <div class="col-lg-7 pt-5">
+                    <h3 class="display-4 text-white mb-3 animated slideInDown">
+                      Éclairant les âmes perdues, Répandant l'amour de Christ.
+                    </h3>
+                    <!-- <p class="fs-5 text-white-50 mb-5 animated slideInDown">
+                        À travers l'amour du Christ, nous guidons les âmes
+                        perdues, offrant espoir, réconfort et but pour illuminer
+                        leur chemin.
+                      </p> -->
+                    <button class="mui-button secondary-button">
+                      <a href="ministere.html">DECOUVRIR</a>
+                    </button>
+                  </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-                        <img class="img-fluid mb-4" src="img/icon-2.png" alt="">
-                        <h4 class="mb-3">Medical Treatment</h4>
-                        <p class="mb-4">Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed vero dolor duo.</p>
-                        <a class="btn btn-outline-primary px-3" href="">
-                            Learn More
-                            <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
-                                <i class="fa fa-arrow-right"></i>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="service-item bg-white text-center h-100 p-4 p-xl-5">
-                        <img class="img-fluid mb-4" src="img/icon-3.png" alt="">
-                        <h4 class="mb-3">Pure Drinking Water</h4>
-                        <p class="mb-4">Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed vero dolor duo.</p>
-                        <a class="btn btn-outline-primary px-3" href="">
-                            Learn More
-                            <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
-                                <i class="fa fa-arrow-right"></i>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div> -->
-    <!-- Service End -->
-
-    <!-- About Start -->
-    <div class="container-xxl py-5">
-      <div class="container">
-        <div class="row g-5">
-          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-            <div
-              class="position-relative overflow-hidden h-100"
-              style="min-height: 400px"
-            >
-              <img
-                class="position-absolute w-100 h-100 pt-5 pe-5"
-                src="img/about-5.jfif"
-                alt="  Le centre chrétien"
-                style="object-fit: cover"
-              />
-              <!-- <img
-                class="position-absolute top-0 end-0 bg-white ps-2 pb-2"
-                src="img/about-4.jfif"
-                alt="  Le centre chrétien"
-                style="width: 200px; height: 200px"
-              /> -->
+              </div>
             </div>
           </div>
-          <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-            <div class="h-100">
-              <h1 class="display-6 mb-5">
-                Épanouir les Cœurs : Cultiver l'Amour de Christ pour une Vie
-                Transformée
-              </h1>
-
-              <p class="mb-5">
-                Cultivons l'amour de Christ, une force bienveillante qui éclaire
-                nos vies, dissipe les ténèbres et inspire des actions empreintes
-                de compassion et de grâce infinie. Comme l'apôtre Paul nous le
-                rappelle dans
-                <strong style="color: #eeba05">
-                  1 Corinthiens 16:14 (LSG) : "Que tout ce que vous faites se
-                  fasse avec amour." </strong
-                >Cette exhortation résonne profondément dans nos cœurs, nous
-                rappelant que chaque acte, chaque parole et chaque pensée
-                doivent être teintés de l'amour du Christ. En suivant cette
-                voie, nous contribuons à illuminer non seulement nos propres
-                vies, mais aussi celles de ceux qui nous entourent.
-              </p>
-              <p class="mb-5">
-                Dans un monde en perpétuel mouvement, il est essentiel de
-                nourrir nos âmes et de rechercher des voies qui élèvent nos
-                esprits. Épanouir les Cœurs : Cultiver l'Amour de Christ pour
-                une Vie Transformée est bien plus qu'un simple principe, c'est
-                une invitation à une expérience profonde et transcendante. C'est
-                une quête pour développer une connexion intime avec l'amour
-                divin, et permettre à cette connexion de transformer nos vies de
-                manière significative.
-              </p>
-              <h2>Nourrir l'Âme à Travers l'Étude et la Méditation</h2>
-              <p class="mb-5">
-                Le premier pilier de cet épanouissement réside dans l'étude
-                approfondie des enseignements du Christ. Comme le dit le
-                <strong style="color: #eeba05">
-                  Psaume 119:105, "Ta parole est une lampe à mes pieds et une
-                  lumière sur mon sentier."</strong
-                >
-                Plonger dans les Écritures, méditer sur les paroles de sagesse
-                et intégrer ces vérités dans notre quotidien sont des moyens
-                puissants de cultiver l'amour de Christ. Cette connexion avec
-                les enseignements sacrés nourrit notre âme et apporte une
-                profondeur de compréhension qui guide nos actions et nos
-                décisions.
-              </p>
-              <h2>
-                Cultiver la Compassion et l'Altruisme au Sein de la Communauté
-              </h2>
-              <p class="mb-5">
-                L'amour de Christ se manifeste également à travers nos
-                interactions avec les autres. Comme l'apôtre Paul nous le
-                rappelle dans
-                <strong style="color: #eeba05">
-                  Galates 5:13 (NIV) : "Frères et sœurs, vous avez été appelés à
-                  la liberté. Mais ne prenez pas cette liberté pour couvrir les
-                  désirs de votre nature propre. Au contraire, par amour,
-                  mettez-vous au service les uns des autres."</strong
-                >
-                Ce verset nous encourage à vivre dans l'amour et à servir les
-                autres avec humilité, en laissant de côté nos propres désirs
-                égoïstes.
-              </p>
-              <p class="mb-5">
-                Cultiver la compassion et l'altruisme au sein de notre
-                communauté est un acte de service qui reflète cet amour divin.
-                En
-                <strong style="color: #eeba05">
-                  1 Jean 3:17-18 (NIV), il est écrit : "Si quelqu'un possède du
-                  bien du monde et que, voyant son frère dans le besoin, il lui
-                  ferme ses entrailles, comment l'amour de Dieu demeure-t-il en
-                  lui ? Petits enfants, n'aimons pas en parole et avec la
-                  langue, mais en action et avec vérité." </strong
-                >Ce passage nous rappelle l'importance d'agir avec compassion et
-                de répondre aux besoins de nos frères et sœurs dans l'amour, en
-                mettant en pratique notre foi.
-              </p>
-              <p class="mb-5">
-                En tendant la main à ceux dans le besoin, en écoutant
-                attentivement et en offrant un soutien sincère, nous répandons
-                les graines de l'amour de Christ qui portent des fruits de
-                transformation. Dans
-                <strong style="color: #eeba05">
-                  Luc 6:38 (NIV), Jésus enseigne : "Donnez, et il vous sera
-                  donné : on versera dans votre sein une bonne mesure, serrée,
-                  secouée et qui déborde ; car on vous mesurera avec la mesure
-                  dont vous vous serez servis." </strong
-                >Ce verset souligne la notion de donner avec générosité et
-                d'être bénis en retour. Lorsque nous agissons avec amour envers
-                les autres, nous créons un impact positif qui se répand et porte
-                des fruits durables.
-              </p>
-
-              <h2>
-                La Transformation Personnelle : Rayonner d'Amour et de Lumière
-              </h2>
-              <p class="mb-5">
-                En embrassant l'amour de Christ, nous embrassons également la
-                possibilité d'une transformation personnelle profonde. Comme
-                <strong style="color: #eeba05">
-                  Romains 12:2 nous le rappelle, "Ne vous conformez pas au monde
-                  actuel, mais soyez transformés par le renouvellement de
-                  l’intelligence."</strong
-                >
-                L'amour divin illumine nos cœurs et nous pousse à dépasser nos
-                limites, à guérir nos blessures et à devenir la meilleure
-                version de nous-mêmes. Cette transformation intérieure se
-                traduit par des actions extérieures, permettant à notre lumière
-                intérieure de rayonner à travers notre service, notre compassion
-                et notre engagement envers le bien-être des autres.
-              </p>
-              <p class="mb-5">
-                Épanouir les Cœurs : Cultiver l'Amour de Christ pour une Vie
-                Transformée représente un voyage sacré vers une vie remplie
-                d'amour, de compassion et de transformation. Par l'étude, le
-                service et la connexion avec l'amour divin, nous pouvons
-                cultiver une vie qui honore les enseignements du Christ et
-                contribue à la création d'un monde empli de paix, d'amour et
-                d'harmonie.
-              </p>
-
-              <a
-                class="btn btn-outline-primary py-2 px-3"
-                target="_blank"
-                href="https://www.facebook.com/Samuel.DALUM"
-              >
-                Suivez-nous sur facebook
-                <div
-                  class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2"
-                >
-                  <i class="fa fa-arrow-right"></i>
+          <div class="carousel-item">
+            <img
+              class="w-100"
+              src="img/all7.jfif"
+              alt=" Philharmonie La Grâce Parle"
+            />
+            <div class="carousel-caption">
+              <div class="container">
+                <div class="row justify-content-center">
+                  <div class="col-lg-7 pt-5">
+                    <h3 class="display-4 text-white mb-3 animated slideInDown">
+                      Philharmonie La Grâce Parle : La Parole en Mélodie.
+                    </h3>
+                    <!-- <p class="fs-5 text-white-50 mb-5 animated slideInDown">
+                        Philharmonie La Grâce Parle : La Parole en Mélodie. Notre
+                        groupe chrétien de musique résonne avec l'amour divin.
+                      </p> -->
+                    <button class="mui-button secondary-button">
+                      <a href="fanfare.html">DECOUVRIR</a>
+                    </button>
+                  </div>
                 </div>
-              </a>
+              </div>
             </div>
           </div>
         </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#header-carousel"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Précédent</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#header-carousel"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Suivant</span>
+        </button>
       </div>
     </div>
-    <!-- About End -->
+    <!-- Carousel End -->
 
     <!-- Footer Start -->
     <div
