--- a/ministere.html
+++ b/ministere.html
@@ -36,6 +36,7 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet" />
+    <link href="css/humanitaire.css" rel="stylesheet" />
     <!-- Google tag (gtag.js) -->
     <script
       async
@@ -50,7 +51,65 @@
 
       gtag("config", "G-FSM4EQJ2E1");
     </script>
-    <style></style>
+    <style>
+      .container_car {
+        width: 100vw; /* Largeur de votre carrousel */
+        overflow: hidden;
+        height: auto;
+
+        display: none;
+      }
+
+      .carousel_sema {
+        display: flex;
+        width: 100vw;
+        height: auto;
+        animation: carousel-animation 10s linear infinite; /* 10s de délai entre chaque image */
+      }
+
+      .item {
+        width: 100%;
+        flex-shrink: 0;
+        transition: transform 1s;
+      }
+      img {
+        object-fit: contain;
+      }
+      @media (max-width: 768px) {
+        .container_car {
+          display: block;
+        }
+      }
+      @keyframes carousel-animation {
+        0% {
+          transform: translateX(0);
+        }
+        20% {
+          transform: translateX(0);
+        }
+        25% {
+          transform: translateX(-100%);
+        }
+        45% {
+          transform: translateX(-100%);
+        }
+        50% {
+          transform: translateX(-200%);
+        }
+        70% {
+          transform: translateX(-200%);
+        }
+        75% {
+          transform: translateX(-300%);
+        }
+        95% {
+          transform: translateX(-300%);
+        }
+        100% {
+          transform: translateX(0);
+        }
+      }
+    </style>
   </head>
   <body>
     <!-- Spinner Start -->
@@ -239,84 +298,180 @@
     </div>
     <!-- Page Header End -->
 
-    <!-- Carousel Start -->
-    <div class="container-fluid p-0 mb-5">
-      <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img
-              class="w-100"
-              src="img/carousel-1.jfif"
-              alt="  Éclairant les âmes perdues, Répandant l'amour de Christ"
-            />
-            <div class="carousel-caption">
-              <div class="container">
-                <div class="row justify-content-center">
-                  <div class="col-lg-7 pt-5">
-                    <h3 class="display-4 text-white mb-3 animated slideInDown">
-                      Éclairant les âmes perdues, Répandant l'amour de Christ.
-                    </h3>
-                    <!-- <p class="fs-5 text-white-50 mb-5 animated slideInDown">
-                        À travers l'amour du Christ, nous guidons les âmes
-                        perdues, offrant espoir, réconfort et but pour illuminer
-                        leur chemin.
-                      </p> -->
-                    <button class="mui-button secondary-button">
-                      <a href="ministere.html">DECOUVRIR</a>
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img
-              class="w-100"
-              src="img/all7.jfif"
-              alt=" Philharmonie La Grâce Parle"
-            />
-            <div class="carousel-caption">
-              <div class="container">
-                <div class="row justify-content-center">
-                  <div class="col-lg-7 pt-5">
-                    <h3 class="display-4 text-white mb-3 animated slideInDown">
-                      Philharmonie La Grâce Parle : La Parole en Mélodie.
-                    </h3>
-                    <!-- <p class="fs-5 text-white-50 mb-5 animated slideInDown">
-                        Philharmonie La Grâce Parle : La Parole en Mélodie. Notre
-                        groupe chrétien de musique résonne avec l'amour divin.
-                      </p> -->
-                    <button class="mui-button secondary-button">
-                      <a href="fanfare.html">DECOUVRIR</a>
-                    </button>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+    <div class="container_car">
+      <div class="carousel_sema">
+        <div class="item">
+          <img
+            src="./img/emission.png"
+            alt="Image 2"
+            width="100%"
+            height="300px"
+          />
         </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#header-carousel"
-          data-bs-slide="prev"
+        <div class="item">
+          <img
+            src="./img/femme-de-grace.png"
+            width="100%"
+            height="300px"
+            alt="Image 1"
+          />
+        </div>
+        <div class="item">
+          <img
+            src="./img/chambre-haute.png"
+            alt="Image 3"
+            width="100%"
+            height="300px"
+          />
+        </div>
+        <div class="item">
+          <img
+            src="./img/coktail.png"
+            alt="Image 4"
+            width="100%"
+            height="300px"
+          />
+        </div>
+        <div class="item">
+          <img
+            src="./img/jeune-jeune.png"
+            alt="Image 5"
+            width="100%"
+            height="300px"
+          />
+        </div>
+      </div>
+    </div>
+    <div
+      class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3"
+    >
+      À propos de nous
+    </div>
+    <div class="parent">
+      <div class="child7"></div>
+      <div class="child2">
+        <h2>Notre Mission : Changer des Vies, un Acte de Bonté à la Fois</h2>
+        <p>
+          Nous sommes guidés par la conviction profonde que chaque individu
+          mérite une chance de rédemption et de réintégration réussie dans la
+          société. Notre mission est simple : apporter de l'espoir, du réconfort
+          et du soutien aux personnes incarcérées. Nous réalisons cette mission
+          grâce à la visite régulière de nos bénévoles dévoués, qui offrent un
+          soutien moral, écoutent les préoccupations et renforcent les liens
+          humains. Nous croyons en la réhabilitation plutôt qu'en la punition,
+          et travaillons en étroite collaboration avec les autorités
+          pénitentiaires et d'autres organisations pour faciliter la réinsertion
+          des détenus dans la société. Nous organisons également des programmes
+          d'information et des campagnes pour sensibiliser le public aux enjeux
+          liés à la réhabilitation.
+        </p>
+        <a
+          class="btn btn-outline-primary py-2 px-3"
+          href="contact.html#benevole"
         >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Précédent</span>
+          Nous suivre sur Facebook
+          <div
+            class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2"
+          >
+            <i class="fa fa-arrow-right"></i>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="parent">
+      <div class="child8"></div>
+      <div class="child2">
+        <h2>Notre Mission : Changer des Vies, un Acte de Bonté à la Fois</h2>
+        <p>
+          Nous sommes guidés par la conviction profonde que chaque individu
+          mérite une chance de rédemption et de réintégration réussie dans la
+          société. Notre mission est simple : apporter de l'espoir, du réconfort
+          et du soutien aux personnes incarcérées. Nous réalisons cette mission
+          grâce à la visite régulière de nos bénévoles dévoués, qui offrent un
+          soutien moral, écoutent les préoccupations et renforcent les liens
+          humains. Nous croyons en la réhabilitation plutôt qu'en la punition,
+          et travaillons en étroite collaboration avec les autorités
+          pénitentiaires et d'autres organisations pour faciliter la réinsertion
+          des détenus dans la société. Nous organisons également des programmes
+          d'information et des campagnes pour sensibiliser le public aux enjeux
+          liés à la réhabilitation.
+        </p>
+        <a
+          class="btn btn-outline-primary py-2 px-3"
+          href="contact.html#benevole"
+        >
+          Nous suivre sur Facebook
+          <div
+            class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2"
+          >
+            <i class="fa fa-arrow-right"></i>
+          </div>
+        </a>
+      </div>
+    </div>
+
+    <div class="containers">
+      <div class="boxs box1s">
+        <div class="icons">
+          <span class="icon">&#128161;</span>
+          <button class="mui-button success">
+            <a href="newsletter.html">The daily mediation</a>
+          </button>
+        </div>
+        <h2>Recevoir une méditation tous les jours</h2>
+        <button
+          style="
+            margin: 5px;
+            padding: 10px 20px;
+            background-color: transparent;
+            color: #fff;
+            border: 1px solid white;
+            cursor: pointer;
+          "
+        >
+          <a href="newsletter.html#subscribe">JE MABONNE</a>
+        </button>
+      </div>
+      <div class="boxs box2s">
+        <button
+          style="
+            padding: 10px 20px;
+            margin: 5px;
+            background-color: transparent;
+
+            border: 1px solid white;
+            cursor: pointer;
+          "
+        >
+          <a href="contact.html">NOUS ÉCRIRE UN EMAIL</a>
         </button>
         <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#header-carousel"
-          data-bs-slide="next"
+          style="
+            margin: 5px;
+            padding: 10px 20px;
+            background-color: transparent;
+
+            color: #fff;
+            border: 1px solid white;
+            cursor: pointer;
+          "
         >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Suivant</span>
+          <a href="prayer.html">DEMANDER LA PRIÈRE</a>
+        </button>
+        <button
+          style="
+            margin: 5px;
+            padding: 10px 20px;
+            background-color: transparent;
+            color: #fff;
+            border: 1px solid white;
+            cursor: pointer;
+          "
+        >
+          <a href="newsletter.html#subscribe">M’ABONNER À LA NEWSLETTER</a>
         </button>
       </div>
     </div>
-    <!-- Carousel End -->
-
     <!-- Footer Start -->
     <div
       class="container-fluid bg-dark text-white-50 footer mt-5 pt-5 wow fadeIn"
