--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <!-- Template Stylesheet -->
     <link href="css/modal.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
+    <link href="css/humanitaire.css" rel="stylesheet" />
     <!-- Script pour les transactions en ligne -->
     <script src="https://cdn.fedapay.com/checkout.js?v=1.1.7"></script>
     <!-- Google tag (gtag.js) -->
@@ -597,7 +598,69 @@ BOUTIQUE
 
     </div>
     </div>
-
+    <div
+    style="text-align: center;"
+    class="d-inline-block rounded-pill bg-secondary text-primary py-1 px-3 mb-3"
+  >
+    Ce que nous faisons
+  </div>
+  <h1 class="display-6 mb-5" style="text-align: center;">
+    Apprenez-en plus sur ce que nous faisons et impliquez-vous
+  </h1>
+  <div class="parent">
+    <div class="child1"></div>
+    <div class="child2">
+      <h2>
+        Visite Émotionnelle à l'Orphelinat : Un Regard Profond sur les Besoins des Enfants</h2>
+      <p>
+        Nous avons une mission profonde : apporter de l'espoir, du soutien et des opportunités aux enfants qui ont perdu leurs parents. Nous croyons que chaque enfant mérite un avenir prometteur, et c'est pourquoi nous travaillons sans relâche pour réaliser cette vision. Nous nous engageons à visiter régulièrement les orphelins, à établir des liens affectueux et à leur offrir une éducation de qualité. Nous sommes déterminés à les préparer pour un avenir brillant, en les dotant des compétences et des ressources nécessaires pour réussir dans la vie.Rejoignez notre cause en tant que bénévole, en faisant un don ou en découvrant nos initiatives. Ensemble, nous pouvons éclairer l'avenir des orphelins, un acte de bonté à la fois.
+      </p>
+      <a class="btn btn-outline-primary py-2 px-3"  href="humanitaire.html">
+     En savoir plus
+            <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
+                <i class="fa fa-arrow-right"></i>
+            </div>
+        </a>
+    </div>
+  </div>
+  <div class="parent">
+    <div class="child2">
+      <h2>'Brigade de Prière' : Un Chemin Spirituel Vers la Sérénité</h2>
+      <p>
+        Le programme de prière "Brigade de la Rédemption" est une initiative chrétienne ouverte à tous ceux qui cherchent la guérison, le travail, la santé et d'autres bénédictions divines. Fondé sur la foi chrétienne, ce programme offre un espace de prière et d'intercession pour les besoins spirituels et matériels de chacun. Les participants peuvent se joindre à des séances de prière collectives visant à solliciter les bénédictions de Dieu dans divers aspects de leur vie. Que ce soit pour trouver la guérison, la prospérité ou la paix intérieure, la "Brigade de la Rédemption" offre un lieu de recueillement et d'espérance pour ceux qui cherchent la grâce divine.
+      </p>
+      <a
+        class="btn btn-outline-primary py-2 px-3"
+        href="https://www.facebook.com/Samuel.DALUM" target="_blank"
+      >
+       Suivre Brigade de prière sur facebook
+        <div
+          class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2"
+        >
+          <i class="fa fa-arrow-right"></i>
+        </div>
+      </a>
+    </div>
+    <div class="child7"></div>
+    
+  </div>
+  <div class="parent">
+    <div class="child9"></div>
+    <div class="child2">
+      <h2>Philharmonie La Grâce Parle </h2>
+      <p>
+        Notre groupe de musique Philharmonie chrétienne offre une variété de services pour répondre aux besoins de nos communautés. Nous organisons des concerts en direct pour partager notre musique et notre message de foi. Nous proposons également des ateliers de musique pour aider les gens à développer leurs compétences et leur passion pour la musique. En plus de cela, nous offrons des services de louange pour les églises et les groupes de prière. Enfin, nous sommes fiers de collaborer avec d'autres artistes pour créer des projets musicaux uniques et inspirants. Chez nous, la musique est plus qu'un simple divertissement, c'est une expérience de foi et de communauté..
+      </p>
+      <a class="btn btn-outline-primary py-2 px-3" href="">
+        Visiter le site web
+        <div
+          class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2"
+        >
+          <i class="fa fa-arrow-right"></i>
+        </div>
+      </a>
+    </div>
+  </div>
       <!-- Donate Start -->
   <div
   class="container-fluid donate my-5 py-5"
@@ -615,16 +678,7 @@ BOUTIQUE
         <h1 class="display-6 text-white mb-5">
           Merci pour les résultats obtenus avec vous
         </h1>
-        <p class="colorTexte" >
-          Faire un don maintenant, c'est plus qu'un simple geste généreux,
-          c'est une action qui peut transformer des vies. En donnant aux
-          personnes dans le besoin, nous devenons les artisans d'un
-          changement positif et significatif dans leur existence. Chaque
-          don, aussi modeste soit-il, peut contribuer à fournir une aide
-          essentielle, qu'il s'agisse de nourriture pour les affamés, d'eau
-          potable pour les assoiffés, de soins médicaux pour les malades, ou
-          d'éducation pour les enfants démunis.
-        </p>
+   
       </div>
       <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
         <div class="h-100 bg-secondary p-5">
