--- a/ministere.html
+++ b/ministere.html
@@ -367,9 +367,9 @@
         </p>
         <a
           class="btn btn-outline-primary py-2 px-3"
-          href="contact.html#benevole"
+          href="https://www.facebook.com/Samuel.DALUM"
         >
-          Nous suivre sur Facebook
+          Brigade de prière sur facebook
           <div
             class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2"
           >
@@ -398,7 +398,8 @@
         </p>
         <a
           class="btn btn-outline-primary py-2 px-3"
-          href="contact.html#benevole"
+          target="_blank"
+          href="https://www.facebook.com/Samuel.DALUM"
         >
           Nous suivre sur Facebook
           <div
