--- a/humanitaire.html
+++ b/humanitaire.html
@@ -451,9 +451,7 @@
       <div class="child6"></div>
       <div class="child2">
         <h2>
-          Notre Mission : Éduquer avec des Fournitures Scolaires, un Acte de
-          Bonté à la Fois
-        </h2>
+          Notre Mission : Éduquer avec des Fournitures Scolaires
         <p>
           À la Fondation pour les Dons de Fournitures Scolaires, notre mission
           est d'éclairer le chemin de l'éducation. Nous croyons que chaque
