--- a/about.html
+++ b/about.html
@@ -252,13 +252,13 @@
             Apprenez-en plus sur ce que nous faisons et impliquez-vous.
           </h1>
         </div>
-        <button class="mui-button secondary" style="text-align: center;"><a href="./img/présentation lgp 1_compressed.pdf" target="_blank" download>Télécharger la Présentation de la Fondation(PDF)</a></button>
+     
         </div>
       </div>
     </div>
     <!-- Service End -->
-   
-
+   <img src="./img/objectif.png"  alt="" style="object-fit: contain;width: 100vw;height: 320px;" >
+   <button class="mui-button secondary" style="text-align: center;"><a href="./img/présentation lgp 1_compressed.pdf" target="_blank" download>Télécharger la Présentation de la Fondation(PDF)</a></button>
     <div class="containers">
       <div class="boxs box1s">
         <div class="icons">
