--- a/index.html
+++ b/index.html
@@ -863,8 +863,8 @@ BOUTIQUE
           </div>
         </div>
       </div>
-      <a href="https://api.whatsapp.com/send?phone=NUMÉRODEVOTREWHATSAPP" target="_blank">
-        <img src="./img/whatsapp-icon.png" style="z-index: 10000; box-shadow: 1px 2px 3px gray;" alt="WhatsApp" width="50" height="50">
+      <a href="https://api.whatsapp.com/send?phone=530378732" target="_blank">
+        <img src="./img/whatsapp-icon.png" style="z-index: 10000;  position: fixed;bottom: 0;left: 0;border-radius: 100%;" alt="WhatsApp" width="50" height="50">
     </a>
     </div>
     <!-- Footer End -->
