--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@ BOUTIQUE
           </div>
         </div>
       </div>
-      <a href="https://api.whatsapp.com/send?phone=530378732" target="_blank">
+      <a href="https://api.whatsapp.com/send?phone=+22953037832" target="_blank">
         <img src="./img/whatsapp-icon.png" style="z-index: 10000;  position: fixed;bottom: 0;left: 0;border-radius: 100%;" alt="WhatsApp" width="50" height="50">
     </a>
     </div>
