--- a/about.html
+++ b/about.html
@@ -52,6 +52,32 @@
 
       gtag("config", "G-FSM4EQJ2E1");
     </script>
+    <style>main {
+      padding: 20px;
+    }
+.mainOne{
+  background-color:#F1E3C7;
+        color: white;
+        text-align: center;
+        padding: 20px;
+}
+    section {
+      background-color: white;
+      border-radius: 5px;
+      padding: 20px;
+      margin-bottom: 20px;
+    }
+
+    h2 {
+      color: #333;
+      text-align: left;
+    }
+    p {
+      color: #333;
+      text-align: left;
+    }
+    
+    </style>
   </head>
   <body>
     <!-- Spinner Start -->
@@ -257,14 +283,34 @@
       </div>
     </div>
     <!-- Service End -->
-   <img src="./img/objectif.png"  alt="" style="object-fit: contain;width: 100vw;height: 320px;" >
-   <button class="mui-button secondary" style="text-align: center;"><a href="./img/présentation lgp 1_compressed.pdf" target="_blank" download>Télécharger la Présentation de la Fondation(PDF)</a></button>
+   <!-- <img src="./img/objectif.png"  alt="" style="object-fit: contain;width: 100vw;height: 320px;" > -->
+ <div class="mainOne">  <main>
+  <section id="objectif">
+    <h2>Objectif</h2>
+    <p>Notre objectif est de...</p>
+  </section>
+  <section id="vision">
+    <h2>Vision</h2>
+    <p>Vestibulum fringilla pede sit amet augue. Curabitur turpis.
+
+      Phasellus accumsan cursus velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos.</p>
+  </section>
+  <section id="mission">
+    <h2>Mission</h2>
+    <p>Notre mission est de...</p>
+  </section>
+</main></div>
+<br>
+<p style="text-align: center;">
+
+  <button  class="mui-button secondary" style="text-align: center;"><a href="./img/présentation lgp 1_compressed.pdf" target="_blank" download>Télécharger la Présentation de la Fondation(PDF)</a></button>
+</p>
     <div class="containers">
       <div class="boxs box1s">
         <div class="icons">
           <span class="icon">&#128161;</span>
           <button class="mui-button success">
-            <a href="newsletter.html">LA MÉDITATION QUOTIDIENNE</a>
+            <a href="newsletter.html">The daily mediation</a>
           </button>
         </div>
         <h2>Recevoir une méditation tous les jours</h2>
