--- a/humanitaire.html
+++ b/humanitaire.html
@@ -451,21 +451,18 @@
       <div class="child6"></div>
       <div class="child2">
         <h2>
-          Notre Mission : Éduquer avec des Fournitures Scolaires
+    Formation pour des soft skills
+        </h2>
         <p>
-          À la Fondation pour les Dons de Fournitures Scolaires, notre mission
-          est d'éclairer le chemin de l'éducation. Nous croyons que chaque
-          enfant mérite les outils nécessaires pour réussir à l'école. Nous
-          collectons et distribuons des fournitures scolaires aux enfants dans
-          le besoin, brisant ainsi les barrières qui les empêchent de poursuivre
-          leur éducation. Nos donateurs et bénévoles jouent un rôle essentiel
-          dans cette mission. Rejoignez notre cause en faisant don de
-          fournitures scolaires ou en offrant votre temps comme bénévole.
-          Ensemble, nous pouvons éduquer avec des fournitures scolaires, un acte
-          de bonté à la fois.
+          La formation pour des soft skills, ou compétences comportementales, est un investissement précieux dans le développement personnel et professionnel. Ces compétences, telles que la communication efficace, la résolution de conflits, la créativité et la gestion du temps, sont essentielles pour réussir dans le monde du travail moderne.Les formations sont conçues en permettant aux individus d'améliorer leur intelligence émotionnelle, leur capacité à travailler en équipe et leur adaptabilité, ce qui les rend plus compétents et plus attrayants pour les employeurs. En investissant dans le renforcement des soft skills, les individus sont mieux préparés à relever les défis professionnels tout en favorisant un environnement de travail collaboratif et productif.
         </p>
+        <a class="btn btn-outline-primary py-2 px-3" target="_blank" href="https://api.whatsapp.com/send?phone=+22953037832">
+        Être informé des formations
+                 <div class="d-inline-flex btn-sm-square bg-primary text-white rounded-circle ms-2">
+                     <i class="fa fa-arrow-right"></i>
+                 </div>
+             </a>
       </div>
-    
     </div>
     <!-- Footer Start -->
     <div
