--- a/ministere.html
+++ b/ministere.html
@@ -392,7 +392,7 @@
     <div class="parent">
       <div class="child7"></div>
       <div class="child2">
-        <h2>'Brigade de Prière' : Un Chemin Spirituel Vers la Sérénité</h2>
+        <h2>Brigade de Prières</h2>
         <p>
           Le programme de prière "Brigade de la Rédemption" est une initiative
           chrétienne ouverte à tous ceux qui cherchent la guérison, le travail,
